--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "glfw"]
 	path = glfw
 	url = https://github.com/denghe/glfw
+[submodule "zstd"]
+	path = zstd
+	url = https://github.com/facebook/zstd.git
