--- a/examples/window/CMakeLists.txt
+++ b/examples/window/CMakeLists.txt
@@ -40,6 +40,17 @@ endif()
 
 
 
+SET(BUILD_TESTING OFF CACHE BOOL "BUILD_TESTING" FORCE)
+SET(USE_MSVC_RUNTIME_LIBRARY_DLL OFF CACHE BOOL "USE_MSVC_RUNTIME_LIBRARY_DLL" FORCE)
+SET(ZSTD_BUILD_PROGRAMS OFF CACHE BOOL "ZSTD_BUILD_PROGRAMS" FORCE)
+SET(ZSTD_BUILD_SHARED OFF CACHE BOOL "ZSTD_BUILD_SHARED" FORCE)
+SET(ZSTD_BUILD_TESTS OFF CACHE BOOL "ZSTD_BUILD_SHARED" FORCE)
+SET(ZSTD_LEGACY_SUPPORT OFF CACHE BOOL "ZSTD_LEGACY_SUPPORT" FORCE)
+SET(ZSTD_MULTITHREAD_SUPPORT_DEFAULT OFF CACHE BOOL "ZSTD_MULTITHREAD_SUPPORT_DEFAULT" FORCE)
+SET(ZSTD_MULTITHREAD_SUPPORT OFF CACHE BOOL "ZSTD_MULTITHREAD_SUPPORT" FORCE)
+add_subdirectory(../../zstd/build/cmake zstd)
+
+
 file(GLOB xx_sources
 	${CMAKE_CURRENT_SOURCE_DIR}/../../include/*.h
 	${CMAKE_CURRENT_SOURCE_DIR}/../../include/*.natvis
@@ -57,6 +68,7 @@ target_include_directories(xx PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}/../../include
 	${CMAKE_CURRENT_SOURCE_DIR}/../../deps
 )
+target_link_libraries(xx libzstd_static)
 target_link_libraries(${name} xx)
 
 
@@ -111,6 +123,13 @@ if(MSVC)
 		$<$<PLATFORM_ID:Windows>:/bigobj>
 		$<$<PLATFORM_ID:Windows>:/MP${Biogears_BUILD_PARALLEL_LEVEL}>
 	)
+	
+	
+	target_compile_options(xx PRIVATE
+		$<$<PLATFORM_ID:Windows>:/MP${Biogears_BUILD_PARALLEL_LEVEL}>
+	)
+
+
 
 	set_target_properties(${name} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 
