add more subs. refine CMakeLists.txt

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,24 @@
 [submodule "zstd"]
 	path = zstd
 	url = https://github.com/facebook/zstd.git
+[submodule "soloud"]
+	path = soloud
+	url = https://github.com/denghe/soloud.git
+[submodule "lmdb"]
+	path = lmdb
+	url = https://github.com/denghe/lmdb.git
+[submodule "spine-runtimes-cpp-38"]
+	path = spine-runtimes-cpp-38
+	url = https://github.com/denghe/spine-runtimes-cpp-38.git
+[submodule "pugixml"]
+	path = pugixml
+	url = https://github.com/zeux/pugixml.git
+[submodule "box2d"]
+	path = box2d
+	url = https://github.com/erincatto/box2d.git
+[submodule "enkiTS"]
+	path = enkiTS
+	url = https://github.com/dougbinks/enkiTS.git
+[submodule "stb"]
+	path = stb
+	url = https://github.com/nothings/stb.git
